test/expected/cli/calc_assignment.out
== a standalone assignment is silent, the read prints the value:
5
10
== a formula binds before its inputs and recomputes lazily:
12
40
== an assignment is an expression mid-line, returning its value:
6
5
== a == comparison is not an assignment:
1
0
== an unset variable is an error, not a silent zero:
shit: 1:1: error: Builtin 'calc': cannot evaluate 'nope', Arithmetic: the variable 'nope' is not set.
     1 |  calc -i
       |  ^~~~~~~ here.
